<resources>
    <string name="app_name">Learn Japan</string>


    <!--TEST ____________KHANG ____ DUC______________________-->
    <string name="main">Main</string>
    <string name="retry">Retry</string>
    <string name="review">Review the Result</string>
    <string name="notification">Do you want to retry?</string>
    <string name="answer_a">Answer A</string>
    <string name="answer_b">Answer B</string>
    <string name="answer_c">Answer C</string>
    <string name="answer_d">Answer D</string>
    <string name="test_result_database">LearnJapan.s3db</string>
    <string name="test_result_table">TestResult</string>

    <!--Setting Notification Khang-->
    <string name="notification_channel_id"></string>
    <string name="notification_channel_name"></string>

    <!-- Complete profile BANG-->
    <string name="name">Full name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="contact_info">Contact Info</string>

    <!-- Profile tungtu -->
    <string name="username">Username</string>
    <string name="profile_picture">Profile picture</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="number_set">Number Of Sets: </string>
    <string name="total_words">Total of Words</string>

    <!--Login Diem + Nguyen-->
    <string name="btn_login">Go</string>
    <string name="login_with">Sign in with</string>
    <string name="create_an_account"><u>Create an account?</u></string>
    <string name="forgot_passowrd"><u>Forgot password?</u></string>
    <string name="login">SIGN IN</string>

    <!-- Login Nam -->
    <string name="facebook_app_id">362165454283824</string>
    <string name="fb_login_protocol_scheme">fb362165454283824</string>
    <string name="login_cancel">Sign In Cancelled</string>

    <!--add-vocab Trung-->
    <string name="login_success">Sign In Successfully</string>
    <string name="login_failed">Sign In Attempt failed</string>
    <string name="marugoto_title">まるごと A2.1</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="go">GO</string>
    <string name="sign_in_with">Sign in with</string>
    <!--  reset pass   Hao-->
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="forgot_password_msg">Please fill in your email address to receive your password reset instruction.</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!-- TAM - NHI -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="text_outside_button_buider_learn">Learn</string>
    <string name="text_outside_button_buider_chart">Chart</string>
    <string name="text_outside_button_buider_test">Test</string>
    <string name="text_outside_button_buider_edit">Edit</string>
    <string name="text_outside_button_buider_delete">Delete</string>
    <string name="text_outside_circle_button_text_normal">Text Outside Circle Button(Normal)</string>
    <string name="remove_warning">Do you want to remove this set?</string>
    <string name="connected">Your device is connected</string>
    <string name="not_connected">Your device is not connected</string>

    <string name="profile">Profile</string>
    <string name="about_us">About us</string>
    <string name="logout">Log out</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <!--Dan-->
    <string name="sign_up_failed">Sign Up Failed</string>
    <string name="sign_up_successful">Sign Up Successful</string>


    <!--Thanh-->
    <string name="kanji">Kanji (front)</string>
    <string name="tu_vung_back">Từ vựng (back)</string>

    <string name="tu_vung">Từ vựng (front)</string>
    <string name="hiragana">Hiragana (back)</string>
    <string name="am_han">Âm Hán (back)</string>
    <string name="nghia">Nghĩa (back)</string>
    <string name="warning_unsave_data">Do you want to save your vocabulary set?</string>
    <string name="new_words">New words (%d)</string>

    <!-- learn - trung - nam -->
    <string name="forward">&lt;&lt;</string>
    <string name="next">&gt;&gt;</string>
    <string name="update">Update</string>
</resources>
