<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="10dp">


    <TextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_forgot_password"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:id="@+id/txtForgotPass"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtDetail"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text="@string/forgot_password_msg"
        android:layout_marginTop="10dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilEmail"
        android:layout_marginTop="30dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:cursorVisible="true"
            android:hint="@string/email"
            android:gravity="center_vertical"
            android:inputType="textEmailAddress"
            android:textColorHint="@android:color/black" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_reset_password"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:text="@string/btn_reset_password"
        android:textAllCaps="false"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"/>

    <ProgressBar android:layout_height="30dp"
        android:layout_width="30dp"
        android:id="@+id/progressBar"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        android:layout_gravity="center"/>

</LinearLayout>
