<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_test_activity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolBarTheme.ToolBarStyle"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            tools:text="Test"
            android:textSize="20sp"/>

    </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_test"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="1.0">


        <android.support.constraint.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNumberOfQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_top"
            tools:text="QUESTION: 20/25" />


        <TextView
            android:id="@+id/txtCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CORRECT"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtNumberOfQuestion" />

        <TextView
            android:id="@+id/txtRightCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="20"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtCorrect" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4"/>

        <TextView
            android:id="@+id/txtQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="作文"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_question" />

        <android.support.constraint.Guideline
            android:id="@+id/guildline_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7"/>

        <TextView
            android:id="@+id/txtAnswerA"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:textSize="30sp"
            android:gravity="center"
            android:background="@drawable/border"
            android:text="@string/answer_a"
            android:textColor="@color/text_color_test"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guildline_answer"/>

        <TextView
            android:id="@+id/txtAnswerB"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:textSize="30sp"
            android:gravity="center"
            android:background="@drawable/border"
            android:textColor="@color/text_color_test"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guildline_answer"
            tools:text="@string/answer_b"/>

        <TextView
            android:id="@+id/txtAnswerC"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:gravity="center"
            android:background="@drawable/border"
            android:textColor="@color/text_color_test"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtAnswerA"
            tools:text="@string/answer_c" />

        <TextView
            android:id="@+id/txtAnswerD"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:gravity="center"
            android:background="@drawable/border"
            android:textStyle="bold"
            android:textColor="@color/text_color_test"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtAnswerB"
            tools:text="@string/answer_d" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_test_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <TextView
            android:id="@+id/txtNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="80dp"
            android:text="@string/notification"
            android:textSize="15dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.55" />


        <android.support.constraint.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical"/>

        <Button
            android:visibility="visible"
            android:id="@+id/btnMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:layout_marginRight= "20dp"
            app:layout_constraintRight_toLeftOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/txtNotification"/>

        <Button
            android:visibility="visible"
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:layout_marginLeft="20dp"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/txtNotification" />


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>