<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layoutRoot"
    android:background="#20000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:background="@color/color_white_90"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/camera"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:background="@color/color_white_90">

                <TextView
                    android:padding="@dimen/padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_size"
                    android:text="@string/contact_info"/>

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/swbUserInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:checked="true"
                    android:paddingEnd="@dimen/padding"
                    android:layout_weight="0"/>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/groupUserInfo"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding">

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/tfbName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:labelText="@string/name"
                    app:primaryColor="@color/colorAccent"
                    app:panelBackgroundColor="@color/color_white"
                    app:errorColor="@color/A400red"
                    android:layout_marginTop="@dimen/margin">
                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/txtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"/>
                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/tfbPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:primaryColor="@color/colorAccent"
                    app:panelBackgroundColor="@color/color_white"
                    app:labelText="@string/phone"
                    android:layout_marginTop="@dimen/margin">
                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/txtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"/>
                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>
                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/tfbEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:primaryColor="@color/colorAccent"
                    app:panelBackgroundColor="@color/color_white"
                    app:labelText="@string/email"
                    android:layout_marginTop="@dimen/margin">
                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/txtEmail"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"/>
                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:paddingTop="@dimen/padding"
                    android:paddingBottom="@dimen/padding"
                    android:background="@color/color_white">

                    <Spinner
                        android:id="@+id/spProvince"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"/>

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:paddingTop="@dimen/padding"
                    android:paddingBottom="@dimen/padding"
                    android:background="@color/color_white">

                    <Spinner
                        android:id="@+id/spDistrict"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"/>

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:paddingTop="@dimen/padding"
                    android:paddingBottom="@dimen/padding"
                    android:background="@color/color_white">

                    <Spinner
                        android:id="@+id/spCommune"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"/>

                </LinearLayout>

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/tfbAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:primaryColor="@color/colorAccent"
                    app:panelBackgroundColor="@color/color_white"
                    app:labelText="@string/address"

                    android:layout_marginTop="@dimen/margin">
                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/txtAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"/>
                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
